fix changelog spacing and headings

--- a/src/app/containers/docs/components/changelog/changelog.component.scss
+++ b/src/app/containers/docs/components/changelog/changelog.component.scss
@@ -1,4 +1,5 @@
 .changelog {
+    margin: 1rem 0;
     ::ng-deep {
         h2 {
             pointer-events: none;
